# rvi

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  LICENSE  README.md  SECURITY.md  release-plz.toml  renovate.json
.github/workflows/: build.yml  ci.yml  release-build.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/buffer/: cursor.rs  mod.rs  operations.rs  selection.rs  unicode.rs
src/command/: ex_command.rs  ex_range.rs  mod.rs  motion.rs  parser.rs  repeat.rs  text_objects.rs
src/editor/: editing.rs  mod.rs  movement.rs
src/file/: encoding.rs  mod.rs  reader.rs  writer.rs
src/mode/: mod.rs
src/registers/: mod.rs  operations.rs  storage.rs  types.rs
src/render/: buffer_render.rs  cursor_render.rs  mod.rs  status_line.rs  viewport.rs
src/search/: highlighter.rs  mod.rs  regex_utils.rs  substitute.rs
src/settings/: mod.rs  parser.rs
src/tags/: mod.rs
src/terminal/: input.rs  mod.rs  output.rs  raw_mode.rs  signals.rs  size.rs
src/undo/: action.rs  history.rs  (+1 more)
tests/: MANUAL_TEST_PLAN.md  test_basic_editing.rs  test_ex_commands.rs  test_ex_extended.rs  test_file_handling.rs  test_gq.rs  test_insert_special.rs  test_line_addressing.rs  test_macros.rs  test_marks.rs  test_modes.rs  test_motions.rs  test_multifile.rs  test_registers.rs  test_registers_extended.rs  test_repeat.rs  test_search.rs  test_section_motions.rs  test_selection_coverage.rs  test_settings_extended.rs  test_smoke.rs  test_startup.rs  test_substitute_advanced.rs  test_tag_navigation.rs  test_text_objects.rs  test_undo_redo.rs  test_visual.rs
(+9 files in other folders)
