[package]
name = "rvi"
version = "0.1.3"
edition = "2021"
description = "A memory-safe vi clone written in Rust"
license = "GPL-3.0"

[dependencies]
termion = "4.0"
fancy-regex = "0.18"
unicode-width = "0.2"
unicode-segmentation = "1.11"
thiserror = "2.0"
arboard = "3"
nix = { version = "0.31", features = ["signal", "process", "poll"] }
signal-hook = "0.4"

[dev-dependencies]
criterion = "0.8"
portable-pty = "0.9"
vt100 = "0.16"
tempfile = "3"
